Performance improvements for tree-based models